syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.linkfast.demogrpc.grpc.greeter";
option java_outer_classname = "GreeterProto";

service Greeter {
  rpc greeter(GreeterRequest) returns (GreeterReply);
}

message GreeterRequest {
  string name = 1;
}

message GreeterReply {
  string message = 1;
}